--- a/src/static/css/common.less
+++ b/src/static/css/common.less
@@ -1,7 +1,10 @@
+html,body {
+    width: 100%;
+}
 body {
     margin: 0;
     padding: 0;
-    background-color: #f1f1f1;
+    background-color: #fff;
 
     * {
         margin: 0;
@@ -25,4 +28,9 @@ input {
     display: table;
     content: '';
     clear: both;
+}
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
