完成城市选择页

--- a/src/components/HomeAd/style.less
+++ b/src/components/HomeAd/style.less
@@ -9,6 +9,9 @@
   }
   ul {
     padding: 0 15px;
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-around;  
     li {
       float: left;
       padding: 15px 10px 8px;
