--- a/src/components/HomeHeader/style.less
+++ b/src/components/HomeHeader/style.less
@@ -2,7 +2,7 @@
   display: flex;
   height: 50px;
   background-color: #f3394e;
-  padding: 0 15px;
+  padding: 0 8px 0 5px;
   box-sizing: border-box;
   align-items: center;
   color: #fff;
@@ -12,7 +12,7 @@
     display: flex;
     align-items: center;
     i {
-      margin-left:10px;
+      margin-left:5px;
       font-size: 20px;
     }
     span {
@@ -24,7 +24,7 @@
     position: relative;
     box-sizing: border-box;
     input {
-      min-width: 240px;
+      flex:0 1 240px;
       padding:5px 30px;
       margin: 0 auto;
       border-radius: 20px;
