完成用户中心页

--- a/src/static/css/common.less
+++ b/src/static/css/common.less
@@ -4,7 +4,7 @@ html,body {
 body {
     margin: 0;
     padding: 0;
-    background-color: #fff;
+    background-color: #f1f1f1;
 
     * {
         margin: 0;
@@ -16,6 +16,7 @@ body {
 
 input {
     outline:none;
+    border: none;
 }
 
 .float-left {
